update draft domestic